--- a/SaleWebMvc/appsettings.json
+++ b/SaleWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SaleWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SaleWebMvcContext-dfb8dec0-f0ca-4db9-8d79-d48e1edf0f50;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
